# aura-learn

./: .gitignore  Dockerfile  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  test_lrp_early_exit.py  test_shap.py
app/api/: routes.py
app/api/controllers/: __init__.py  audiobook_controller.py  auth_controller.py  chat_controller.py  document_controller.py  health_controller.py  search_controller.py  service_registry.py  summarize_controller.py  transcription_controller.py  upload_controller.py  xai_controller.py
app/core/: config.py  security.py
app/models/: schemas.py
app/services/: abstractive_service.py  chat_service.py  document_service.py  extractive_service.py  session_service.py  transcription_service.py  tts_service.py  vector_store_service.py  xai_service.py
app/utils/: pdf_processor.py
frontend/: index.html  package-lock.json  package.json  server.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatPanel.jsx  FeaturesPanel.jsx  SourcesLibraryModal.jsx  SourcesPanel.jsx
frontend/src/components/features/: AudioFeature.jsx  SearchFeature.jsx  SummarizeFeature.jsx  TranscriptionFeature.jsx  XaiFeature.jsx
frontend/src/store/: AppContext.jsx
notebooks/: abstractive_summarization.ipynb  abstractive_summarization_15k.ipynb  abstractive_summarization_20k.ipynb  extractive_summarization.ipynb
